<resources>
    <string name="app_name">Toyota Check Screen</string>
    <string name="toggle_name">Yes</string>
    <string name="toggle_on">Touch Start To Continue</string>
    <string name="requirements">You are wearing yada yadayada and yadayadayada</string>
    <string name="background">background</string>
    <string name="cancel">Cancel</string>
    <string name="y">Start</string>
    <string name="tech">Contact Tech</string>
    <string name="fin">Finish</string>
    <string name="time">Time Active:</string>
    <string name="ret">Return To Home</string>
    <string name="back">Back</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="tap_id_to_confirm">tap ID to confirm</string>
    <string name="database_ip_domain">Database IP/Domain</string>
    <string name="wireless_ssid">Wireless SSID</string>
    <string name="database_username">Database Username</string>
    <string name="database_engine">Database Engine</string>
    <string name="wireless_password">Wireless Password</string>
    <string name="subnet_mask">Subnet mask</string>
    <string name="database_name">Database Name</string>
    <string name="static_ip">Static IP</string>
    <string name="set">Set</string>
    <string name="back_settings">Back</string>
    <string name="port">Port #</string>
    <string name="database_password">Database Password</string>
    <string name="tilt_lab_logo">tilt lab logo</string>
    <string name="email_me_requirements">email me requirements</string>
    <string name="unauhorized_user_message">Unauthorized to use this device</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>