<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nzar.toyotarfid.TimeActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:contentDescription=""
        android:src="@drawable/toyota_template"
        tools:ignore="ContentDescription"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextClock
        android:id="@+id/textClock"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        android:fontFamily="sans-serif"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="RtlHardcoded" />

    <Chronometer
        android:id="@+id/chronometer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="Time Active:"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="50sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="RtlHardcoded"
        tools:text="Time Active" />

    <ToggleButton
        android:id="@+id/fin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textOff="@string/fin"
        android:textOn="@string/tap_id_to_confirm"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/Contact"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textClock"
        app:layout_constraintVertical_bias="0.545"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/Contact"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:background="@android:color/holo_orange_dark"
        android:filterTouchesWhenObscured="false"
        android:text="@string/tech"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/time"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="50sp"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/time" />
</android.support.constraint.ConstraintLayout>
