<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nzar.toyotarfid.CheckActivity">



    <ImageView
        android:src="@drawable/toyota_check_temp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/toyota_check_temp"
        tools:ignore="MissingConstraints,RtlHardcoded"
        android:id="@+id/imageView2"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/cancel_action"
        android:layout_width="111dp"
        android:layout_height="73dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:background="@android:color/darker_gray"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        tools:ignore="MissingConstraints,RtlHardcoded"/>

    <Button
        android:id="@+id/Yes"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="110dp"
        android:layout_height="91dp"
        android:layout_marginBottom="81dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="81dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/y"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancel_action"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,RtlHardcoded"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/Contact" />

    <Button
        android:id="@+id/Contact"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="110dp"
        android:layout_height="73dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/holo_orange_dark"
        android:filterTouchesWhenObscured="false"
        android:text="@string/tech"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints,RtlHardcoded"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />



    <TextClock
        android:id="@+id/textClock"
        android:layout_width="124dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        android:fontFamily="sans-serif"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginStart="16dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="128dp"
        android:layout_height="0dp"
        android:maxWidth="100dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/gloves_on"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="148dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
        android:layout_marginEnd="146dp"
        app:layout_constraintRight_toRightOf="@+id/imageButton3"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="@+id/imageButton3" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="128dp"
        android:layout_height="0dp"
        android:maxWidth="100dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ear_protection"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton4"
        android:layout_marginEnd="301dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton4" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:maxWidth="100dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/apron"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="150dp"
        app:layout_constraintLeft_toRightOf="@+id/imageButton3" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="128dp"
        android:layout_height="0dp"
        android:maxWidth="100dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/gloves_off"
        app:layout_constraintRight_toLeftOf="@+id/imageButton7"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="239dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        android:layout_marginEnd="240dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="128dp"
        android:layout_height="0dp"
        android:maxWidth="100dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/no_loose"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton6"
        android:layout_marginEnd="78dp"
        app:layout_constraintRight_toRightOf="@+id/imageButton"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="@+id/imageButton6"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="1.0" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="128dp"
        android:layout_height="0dp"
        android:maxWidth="100dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/face_mask"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="148dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton7"
        android:layout_marginEnd="150dp"
        app:layout_constraintRight_toRightOf="@+id/imageButton7"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/imageButton5"
        app:layout_constraintTop_toTopOf="@+id/imageButton7" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="128dp"
        android:layout_height="0dp"
        android:maxWidth="100dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/eye_protection"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="74dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="71dp"
        app:layout_constraintRight_toRightOf="@+id/imageButton4"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="17dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageButton3" />

</android.support.constraint.ConstraintLayout>

